# SlicerSynthSeg

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  SynthSegConfig.py  USER_GUIDE.md
SlicerSynthSeg/: CMakeLists.txt  SlicerSynthSeg.py  __init__.py  synthseg_complete.py
SlicerSynthSeg/Resources/UI/: SlicerSynthSeg.ui
